@@ -1,0 +1,9 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::Callback::TlsextServername : interface_t {
+  use Net::SSLeay;
+  
+  required method : int ($s : Net::SSLeay, $al_ref : int*, $arg : object);
+  
+}
