@@ -14,6 +14,8 @@ class Net::SSLeay::SSL_CTX : pointer {
   use Net::SSLeay::EVP_PKEY;
   use List;
   
+  use Net::SSLeay::Callback::TlsextServername;
+  
   # Fields
   has pkeys_list : List of Net::SSLeay::EVP_PKEY;
   
