@@ -15,6 +15,8 @@
     * Add Net::SSLeay::OCSP#request_add0_id method.
     * Add Net::SSLeay::OCSP#request_add1_nonce method.
     * Add Net::SSLeay::OCSP_REQUEST#new method.
+    * Add Net::SSLeay::Net::SSLeay::Callback::TlsextServername interface.
+    
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
